@@ -1,4 +1,7 @@
 2012-07-08  Roland Winkler  <winkler@gnu.org>
+	* lisp/bbdb-mua.el (bbdb-update-records): Fix previous patch.
+
+2012-07-08  Roland Winkler  <winkler@gnu.org>
 	* lisp/bbdb-mua.el (bbdb-update-records): Make records a list
 	ordered like address-list.
 
